--- a/resources/sass/Pagination/_products.scss
+++ b/resources/sass/Pagination/_products.scss
@@ -1,5 +1,9 @@
-.productslist{
-    .card{
-        max-width: 18rem;
+.banner{
+    position: relative;
+    .productslist{
+        .card{
+            max-width: 18rem;
+        }
     }
+
 }
